Feat: Adds auth route, controllers and queries
